--- a/auth_with_certificate/action.yml
+++ b/auth_with_certificate/action.yml
@@ -98,13 +98,8 @@ runs:
           --profile-arn "${{ inputs.profile_arn }}" \
           --role-arn "${{ inputs.role_arn }}" \
           --trust-anchor-arn "${{ inputs.trust_anchor_arn }}" > aws_credentials.json
-        export AWS_ACCESS_KEY_ID=$(jq -r '.AccessKeyId' aws_credentials.json)
-        export AWS_SECRET_ACCESS_KEY=$(jq -r '.SecretAccessKey' aws_credentials.json)
-        export AWS_SESSION_TOKEN=$(jq -r '.SessionToken' aws_credentials.json)
-        
-        # Set output values
-        echo "::set-output name=access_key_id::${AWS_ACCESS_KEY_ID}"
-        echo "::set-output name=secret_access_key::${AWS_SECRET_ACCESS_KEY}"
-        echo "::set-output name=session_token::${AWS_SESSION_TOKEN}"
+        echo "AWS_ACCESS_KEY_ID=$(jq -r '.AccessKeyId' aws_credentials.json)" >> $GITHUB_OUTPUT
+        echo "AWS_SECRET_ACCESS_KEY=$(jq -r '.SecretAccessKey' aws_credentials.json)" >> $GITHUB_OUTPUT
+        echo "AWS_SESSION_TOKEN=$(jq -r '.SessionToken' aws_credentials.json)" >> $GITHUB_OUTPUT
       shell: bash
 
