--- a/auth_with_certificate/action.yml
+++ b/auth_with_certificate/action.yml
@@ -103,13 +103,16 @@ runs:
             --profile-arn "${{ inputs.profile_arn }}" \
             --role-arn "${{ inputs.role_arn }}" \
             --trust-anchor-arn "${{ inputs.trust_anchor_arn }}" > aws_credentials.json
+          # Need local variables to mask credentials
+          access_key="$(jq -r '.AccessKeyId' aws_credentials.json)"
           secret="$(jq -r '.SecretAccessKey' aws_credentials.json)"
-          echo "::add-mask::${{ steps.aws_helper.outputs.aws_access_key_id }}"
+          token="$(jq -r '.SessionToken' aws_credentials.json)"
+          echo "::add-mask::$access_key"
           echo "::add-mask::$secret"
-          echo "::add-mask::${{ steps.aws_helper.outputs.aws_session_token }}"
-          echo "AWS_ACCESS_KEY_ID=$(jq -r '.AccessKeyId' aws_credentials.json)" >> "$GITHUB_OUTPUT"
+          echo "::add-mask::$token"
+          echo "AWS_ACCESS_KEY_ID=$access_key" >> "$GITHUB_OUTPUT"
           echo "AWS_SECRET_ACCESS_KEY=$secret" >> "$GITHUB_OUTPUT"
-          echo "AWS_SESSION_TOKEN=$(jq -r '.SessionToken' aws_credentials.json)" >> "$GITHUB_OUTPUT"
+          echo "AWS_SESSION_TOKEN=$token"      >> "$GITHUB_OUTPUT"
         shell: bash
         
       - name: Clean up and tell GitHub to mask the secrets
